tests/compile_fail/declare_scheduler_empty_name.rs
use ktstr::declare_scheduler;

declare_scheduler!(MY_SCHED, {
    name = "",
    binary = "scx_my_sched",
});

fn main() {}
