tests/compile_fail/declare_scheduler_empty_name.stderr
error: declare_scheduler!: `name` must be a non-empty string (whitespace-only is also rejected)
 --> tests/compile_fail/declare_scheduler_empty_name.rs:4:12
  |
4 |     name = "",
  |            ^^
